# nyxora

./: .gitignore  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  INSTALL.md  LICENSE  README.md  SECURITY.md  SETUP_SCRIPTS.md  install_nyxora.sh  setup_nyxora.sh  setup_wallet.sh  wallet.json
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md
.qwen/: AGENT.md
chain/consensus/: mod.rs  poq.rs  pos.rs  verifier.rs
contracts/examples/: nft_quantum_proof.qsc  quantum_randomness.qsc
contracts/sdk/: mod.rs
docker/: Dockerfile  docker-compose.yml
docs/: architecture.md  contracts.md  install.md  validator.md  wallet.md
nyxora-node/: Cargo.toml
nyxora-node/src/: main.rs
nyxora-wallet/: Cargo.toml
nyxora-wallet/src/: main.rs
quantum/circuits/: hex_hadamard_cnot.py
quantum/simulator/: simulator.py
quantum/verifier/: verifier.py
services/: install.sh  nyxora-node.service
tests/: consensus_tests.rs  contract_tests.rs  integration_test.rs  quantum_tests.py
whitepaper/: nyxora_whitepaper.md
