[package]
name = "nyxora-node"
version = "0.1.0"
edition = "2021"

[dependencies]
clap = { version = "4.0", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.0", features = ["full"] }
hyper = { version = "0.14", features = ["full"] }
rand = "0.8"
sha3 = "0.10"
hex = "0.4"
ring = "0.17"
